--- a/parlay/index/templates/par/landing.html
+++ b/parlay/index/templates/par/landing.html
@@ -12,6 +12,8 @@
     <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      rel="stylesheet">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <title>Parlay</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -19,36 +21,137 @@
 <body>
         <header class="white landing-header col-12 text-center text-md-right ">
 
-             <h4 class="gray"><a href = '{% url "login" %}' class="white">Войти</a> или <a href = "{% url 'signup' %}" class="white">зарегистрироваться</a> </h4>
+             <h5 class="gray"><a href = '{% url "login" %}' class="white">Войти</a> или <a href = "{% url 'signup' %}" class="white">зарегистрироваться</a> </h5>
         </header>
         <div class="bogo-box col-12">
-            <h1 class="white"><span class="sogo">Parlay  &mdash;</span>   <br> сервис для пари по книгам</h1>
+            <h1 class="white"><span class="sogo"><i class="ion-ios-book-outline"></i> Parlay  &mdash;</span>   <br>  сервис для пари по книгам
+            </h1>
             <p class="bogo text-center"> Parlay </p>
 
         </div>
 
         <div class=" landing-main col-12">
-
             <div class="row">
-                <div class="col-1 col-md-2"></div>
-                <div class=" landing-card col-10 col-md-4 bg-white">
-                    <div class="col-12 "> <img class="landing-img" src="{% static 'img/books.png' %} "> </div>
-                    <div class="col-12  "> ​
-                        <h1 class="navy text-center"> Книги</h1>
-                        <h2> Добавляйте любую из доступных книг в список прочитанных. </h2>     </div>
+                <div class="col-1"></div>
+                <div class=" landing-card col-10 bg-white">
+                    <div class="row col-12">
+                        <div class="col-6 d-flex flex-column align-items-center">
+                            <img class="landing-img" src="{% static 'img/main.png' %} ">
+                        </div>
+                        <div class="col-6 d-flex flex-column align-items-center">
+                            <img class="landing-img" src="{% static 'img/search-books.png' %} ">
+                        </div>
+                        <div class="col-12">
+                            <h1 class="navy text-center"> Книги </h1>
+                            <h2> Просматривайте доступные на сайте книги в библиотеке на главной странице, либо же найдите
+                                определнные книги по имени автора или названию книги. </h2>
+                        </div>
+                    </div>
+
 
                 </div>
             </div>
-
             <br>
             <div class="row">
-                <div class="col-1 col-md-5"></div>
-                <div class=" landing-card col-10 col-md-4 bg-white">
-                    <div class="col-12 "> <img class="landing-img" src="{% static 'img/adder.png' %} "> <br>
-                                                        <img class="landing-img" src="{% static 'img/adder1.png' %} "></div>
+                <div class="col-1 "></div>
+                <div class=" landing-card col-10 bg-white">
+                    <div class="col-12 d-flex flex-column align-items-center"> <img class="landing-img" src="{% static 'img/adder.PNG' %} ">
+                                                        <img class="landing-img" src="{% static 'img/adder1.PNG' %} "></div>
                     <div class="col-12 ">
                         <h1 class="navy text-center"> Нет нужной книги?</h1>
                         <h2> Если книги нет на сайте, то вы можете добавить ее с ЛитРеса, получив при этом небольшую награду в ридах. </h2></div>
+
+
+
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="landing-card col-10 bg-white">
+                    <div class="row">
+                        <div class="row col-12">
+                            <div class="col-6 d-flex flex-column align-items-center">
+                                <img class="landing-img" src="{% static 'img/search-friends.png' %}">
+                            </div>
+                            <div class="col-6 d-flex flex-column align-items-center">
+                                <img class="landing-img" src="{% static 'img/profile.png' %}">
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <h1 class="navy text-center"> Друзья. Профиль </h1>
+                            <h2>  Находите ваших друзей с помощью поиска. Списсок добавленных друзей и <прочитанных></прочитанных> книг вы сможете посмотреть в своем профиле. </h2>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-1 "></div>
+                <div class=" landing-card col-10   bg-white">
+                    <div class="row d-flex flex-column align-items-center">
+                        <h1 class="navy text-center col-12"> Пари </h1>
+                        <div class="col-12">
+                            <h3> ​
+                                Предложите пари своему другу по любой из прочитанных вами книг. Задайте ставку, срок и отправьте.
+                            </h3>
+                            <h3>
+                                Если же одна из сторон будет не удовлетворена условиями, их можно изменить.
+                            </h3>
+                            <h3 class="text-center"> Подробнее: </h3>
+                        </div>
+                        <div class="col-10 col-md-12 row bg-white toggler mb-6">
+                            <div class="col-12 col-md-6  btn btn-outline-secondary send-toggle" style="white-space: normal;"> <h5 class=" text-center">Я хочу заключить пари</h5> </div>
+                            <div class="col-12 col-md-6  btn btn-outline-secondary   receive-toggle" style="white-space: normal;"> <h5 class="text-center"> Мне предложили пари</h5> </div>
+                        </div>
+
+                        <div class="col-12 sender text-center">
+                            <h2> 1. Добавьте пари: </h2>
+                            <img class="landing-img" src="{% static 'img/add-wager.png' %} ">
+                            <hr>
+                            <h2> 2. Если пари принято, напишите вопросы: </h2>
+                            <img class="landing-img" src="{% static 'img/add-questions.png' %} ">
+                            <hr>
+                            <h2> 3. Проверьте вопросы: </h2>
+                            <img class="landing-img" src="{% static 'img/check-questions.PNG' %} ">
+                            <hr>
+                            <h2> Пари закончено! </h2>
+                        </div>
+                        <div class="col-12 receiver text-center">
+
+                            <h2> 1. Примите спор или измените ставку и время, отведенное на чтение: </h2>
+                            <img class="landing-img" src="{% static 'img/wager-options.png' %} ">
+                            <hr>
+                            <h2> 2. Прочитайте книгу</h2>
+                            <img class="landing-img" src="https://media.giphy.com/media/im6TyTNQ4AuOc/giphy.gif">
+                            <hr>
+                            <h2> 3. Ответьте на вопросы: </h2>
+                            <img class="landing-img" src="{% static 'img/answer-questions.png' %} ">
+                            <hr>
+                            <h2> Пари закончено! </h2>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+            <br>
+            <br>
+
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="landing-card col-10 bg-white  text-center">
+
+
+                             <a href = '{% url "login" %}' class="signin white">Войти</a>
+                             <a href = "{% url 'signup' %}" class="signup white">Зарегистрироваться</a>
+
 
 
 
@@ -62,6 +165,21 @@
         <br>
         <br>
         <br>
-
+        <script>
+            $(".receiver").hide();
+            $(".send-toggle").addClass("disabled");
+            $(".send-toggle").click(function(){
+                $(".send-toggle").addClass("disabled");
+                $(".receive-toggle").removeClass("disabled");
+                $(".receiver").slideUp();
+                $(".sender").slideDown();
+            });
+            $(".receive-toggle").click(function(){
+                $(".send-toggle").removeClass("disabled");
+                $(".receive-toggle").addClass("disabled");
+                $(".sender").slideUp();
+                $(".receiver").slideDown();
+            });
+        </script>
 </body>
 </html>
