--- a/parlay/index/templates/par/add-questions.html
+++ b/parlay/index/templates/par/add-questions.html
@@ -39,7 +39,7 @@
            input = document.createElement('input');
            input.setAttribute('type','text');
            input.setAttribute('name','form-'+n+'-question');
-           input.setAttribute('value','your question');
+           input.setAttribute('placeholder','ваш вопрос');
            input.setAttribute('maxlength','150');
            input.setAttribute('id','id_form-'+n+'-question');
            br = document.createElement('hr');
