--- a/parlay/index/templates/par/edit_profile.html
+++ b/parlay/index/templates/par/edit_profile.html
@@ -5,6 +5,14 @@
 
 {% block content %}
 <br>
+    <style>
+        input[type=file]{
+            text-align:center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
     <div class="container-fluid card text-center row col-12">
         <form method="POST" enctype="multipart/form-data"
               class="col-12 form-group post-form d-flex flex-column">
