--- a/parlay/index/templates/par/wager-list.html
+++ b/parlay/index/templates/par/wager-list.html
@@ -2,11 +2,24 @@
 {% load staticfiles %}
 {% load mathfilters %}
 {% block title %} {{user.username}} | Пари {% endblock %}
+{% block additional %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+{% endblock %}
 {% block content %}
 <br>
+<style>
+    #sent-toggler, #received-toggler{
+        cursor: pointer;
+    }
 
+</style>
 {% if active != 0 %}
+    <div class="card text-center">
+        <h2 class="black"> Отправленные пари </h2>
+    </div>
+    <br>
+    <div class="col-12 sent-list container-fluid flex-column align-items-center" style="display:flex;">
     {% for wager in wagers %}
         <!-- Отправитель -->
         {% if user.username == wager.sender.username %}
@@ -112,8 +125,23 @@
                 </div>
                  <br>
             {% endif %}
-        {% else %}
+        {% endif %}
+    {% endfor %}
+    </div>
+    <div class="card  text-center" id="sent-toggler" style="background:#01FF70">
+        <i class="fas fa-caret-up" id="sent-caret" style="transition: all 0.3s ease;"></i>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="card text-center">
+        <h2 class="black"> Полученные пари </h2>
+    </div>
+    <br>
+    <div class="col-12 container-fluid flex-column align-items-center" style="display:flex;">
+    {% for wager in wagers %}
         <!-- Получатель -->
+        {% if wager.sender.username != user.username %}
             {% if wager.received_end == "no" %}
                 <div class="card text-left">
                     <h2> Книга: <a href="{% url 'detail-book' book_id=wager.book.id %}" class="black">{{ wager.book }}</a>  </h2>
@@ -212,12 +240,41 @@
                  <br>
             {% endif %}
         {% endif %}
-
     {% endfor %}
+    </div>
+    <div class="card  text-center" id="received-toggler" style="background:#01FF70">
+        <i class="fas fa-caret-up" id="received-caret" style="transition: all 0.3s ease;"></i>
+    </div>
 {% else %}
     <div class="card">
             <h4 class=" gray"> Нет активных пари. <a href = "{% url 'add-wager' %}" class="black">Хотите начать новый?</a></h4>
 
     </div>
 {% endif %}
+<script>
+    let i=0
+    let j=0
+    $( "#sent-toggler" ).click(function(){
+        $( ".sent-list" ).slideToggle(400);
+        i++;
+
+        if (i%2==0){
+            $( "#sent-caret" ).css('transform', 'rotate(0deg)');
+        }else{
+            $( "#sent-caret" ).css('transform', 'rotate(180deg)');
+        }
+
+    });
+    $( "#received-toggler" ).click(function(){
+        $( ".received-list" ).slideToggle(400);
+        j++;
+
+        if (j%2==0){
+            $( "#received-caret" ).css('transform', 'rotate(0deg)');
+        }else{
+            $( "#received-caret" ).css('transform', 'rotate(180deg)');
+        }
+
+    });
+</script>
 {% endblock %}
