--- a/parlay/index/templates/par/add_wager.html
+++ b/parlay/index/templates/par/add_wager.html
@@ -1,6 +1,6 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
-{% block title %} Add wager {% endblock %}
+{% block title %} Добавить пари {% endblock %}
 
 {% block content %}
     <br>
@@ -21,7 +21,7 @@
             <br>
             {% endfor %}
             <br>
-        <button type = "submit" class = "save button btn btn-block bg-teal white">Submit <i class="fas fa-arrow-right"></i></button>
+        <button type = "submit" class = "save button btn btn-block bg-teal white">Добавить <i class="fas fa-arrow-right"></i></button>
 
         </div>
 
