--- a/parlay/index/templates/par/base.html
+++ b/parlay/index/templates/par/base.html
@@ -87,7 +87,7 @@
 
     </div>
     <footer class="footer white text-center">
-        <p> (c) 2018. Parlay </p>
+        <p> (c) 2018-2019. Parlay </p>
 
     </footer>
 </body>
