--- a/parlay/index/templates/par/check.html
+++ b/parlay/index/templates/par/check.html
@@ -1,6 +1,6 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
-{% block title %} Вопросы {% endblock %}
+{% block title %} Проверить вопросы {% endblock %}
 
 {% block content %}
 <div class="card text-center">
