--- a/parlay/index/templates/par/edit_profile.html
+++ b/parlay/index/templates/par/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
 
-{% block title %} Edit profile {% endblock %}
+{% block title %} Редактировать профиль {% endblock %}
 
 {% block content %}
 <br>
