--- a/parlay/index/templates/par/edit_wager.html
+++ b/parlay/index/templates/par/edit_wager.html
@@ -1,7 +1,7 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
 
-{% block title %} Edit profile {% endblock %}
+{% block title %} Редактировать условия {% endblock %}
 
 {% block content %}
 <br>
@@ -28,7 +28,7 @@
 
 
          {% endfor %}
-            <button type="submit" class="save button btn btn-block bg-teal white">Save</button>
+            <button type="submit" class="save button btn btn-block bg-teal white">Сохранить</button>
             </div>
        </form>
     </div>
