--- a/parlay/index/templates/par/friends.html
+++ b/parlay/index/templates/par/friends.html
@@ -1,13 +1,13 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
 
-{% block title %} {{ username.username }}'s friends {% endblock %}
+{% block title %} {{ username.username }} | Друзья {% endblock %}
 
 {% block content %}
     <br>
 
     <div class="card">
-        <h3 class="display-4 text-center"> {{username.username}}'s friends: </h3>
+        <h3 class="display-4 text-center">Друзья {{username.username}}: </h3>
     </div>
     <br> <br>
 
