--- a/parlay/index/templates/par/signup.html
+++ b/parlay/index/templates/par/signup.html
@@ -1,6 +1,6 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
-{% block title %} Register {% endblock %}
+{% block title %} Зарегистрироваться {% endblock %}
 {% block additional %}
     <script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
@@ -56,9 +56,8 @@
             {% endfor %}
         {% endfor %}
          <br>
-         <div class="g-recaptcha" data-sitekey="6Lf3c0sUAAAAANc9TSL_AB74wE1bH4u9UrT45qrt"></div>
          <br>
-         <button type="button" class="button-small btn bg-teal white " id="submit-button"> Sign up <i class="fas fa-arrow-right"></i></button>
+         <button type="button" class="button-small btn bg-teal white " id="submit-button"> Зарегистрироваться <i class="fas fa-arrow-right"></i></button>
     </div>
   </form>
 
