--- a/parlay/index/templates/registration/login.html
+++ b/parlay/index/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
-{% block title %} Login {% endblock %}
+{% block title %} Войти {% endblock %}
 {% block content %}
 
 <div id = "" class ="row col-12 signup ">
@@ -47,7 +47,7 @@
             {% endfor %}
 
         <br>
-         <button type="submit" class="button col-8 col-md-4 col-lg-2 btn bg-teal white ">Login <i class="fas fa-arrow-right"></i></button>
+         <button type="submit" class="button col-8 col-md-4 col-lg-2 btn bg-teal white ">Войти <i class="fas fa-arrow-right"></i></button>
      </div>
   </form>
 
