--- a/parlay/index/templates/par/books.html
+++ b/parlay/index/templates/par/books.html
@@ -1,13 +1,13 @@
 {% extends 'par/base.html' %}
 {% load staticfiles %}
 
-{% block title %} {{ username.username }}'s books {% endblock %}
+{% block title %} {{ username.username }} | Книги{% endblock %}
 
 {% block content %}
 
     <br>
     <div class="card">
-        <h3 class="display-4 text-center"> {{username.username}}'s books: </h3>
+        <h3 class="display-4 text-center"> Книги {{username.username}}: </h3>
     </div>
 
         <br> <br>
